--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:seed": "./node_modules/.bin/sequelize-cli db:seed:all"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
