--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_PASSWORD="123"
 DB_HOST="127.0.0.1"
 DB_NAME="cars_login"
 JWT_SIGNATURE_KEY=Rahasia2
+GOOGLE_CLIENT_ID = 1055147214459-4rto09ouqlnqtvvipl6gmlfst6eghdmj.apps.googleusercontent.com
